2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21204: iotnx61.h PRR bits incorrect
	* include/avr/iotnx61.h: Use correct bit numbers for
	PRTIM0/PRTIM1.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21444: Undocument -minit-stack
	* doc/api/using-tools.dox: Remove references to -minit-stack,
	add an explanation for how to set __stack in order to relocate
	the stack.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #20530: Bug in sample code for early wdt disable
	* include/avr/wdt.h: move variable mcusr_mirror into
	the .noinit section in example code.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #20248: FAQ#3: clarify which registers are safe to be used
	* doc/api/faq.dox: Describe that r8...r15 can only be used
	for register variables if they are not used for argument
	passing.  Clarify that call-saved registers must be
	preserved even in case they are used for argument passing by
	the compiler.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #20650: Missing description of AVR specific C-preprocessor
	macros
	* doc/api/using-tools.dox: Document the target-specific macros
	__AVR, __AVR__, AVR, and __NO_INTERRUPTS__.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #18373: Bugs in Inline ASM documentacion
	* doc/api/inline_asm.dox: Inline asm documentation improvements:
	  . mention named operands
	  . document that read-write constraints to work
	  . explain read-write constraints

2007-10-29  Eric B. Weddington  <eweddington@cso.atmel.com>

	* include/avr/power.h: Add support for ATmega48P-88P-168P-328P devices.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/util/atomic.h: Fix a documentation spelling error.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump revision to 1.5.1-20071030 in order to
	indicate post-release 1.5.1-20071029 state.

2007-10-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump revision to 1.5.1-20071029 in order to